<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ar.edu.utn.frsf.isi.dam.bancolab01.MainActivity">

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMail" />

    <EditText
        android:id="@+id/edtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCuit"
        android:id="@+id/tvCuit" />

    <EditText
        android:id="@+id/edtCuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvMoneda"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lblMoneda" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/optMoneda">

            <RadioButton
                android:id="@+id/optDolar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblMonedaDolar"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <RadioButton
                android:id="@+id/optPesos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblMonedaPesos"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
        </RadioGroup>
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMonto"
        android:inputType="number"
        android:id="@+id/tvMonto" />

    <EditText
        android:id="@+id/edtMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDias"
        android:id="@+id/tvDias" />

    <SeekBar
        android:id="@+id/seekDias"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="180"
        android:min="10"
        android:progress="1" />

    <TextView
        android:id="@+id/tvDiasSeleccionados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

    <TextView
        android:id="@+id/tvIntereses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lblAvisarVencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAvisarVencimiento"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/swAvisarVencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/togAccion"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/btnAcreditar"
        android:textOff="@string/lblAccionVencimientoAcreditar"
        android:textOn="@string/lblAccionVencimientoRenovar" />

    <CheckBox
        android:id="@+id/chkAceptoTerminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chkTerminos"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

    <Button
        android:id="@+id/btnHacerPF"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/btnPlazo" />

    <TextView
        android:id="@+id/edtMensajes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="6"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

</LinearLayout>
